Veileder kan ikke slette kandidat, bare nulle ut kandidatens tilretteleggingsbehov. Når veileder henter kandidat uten behov returneres ikke kandidaten. Når veileder oppreter kandidat og kandidat uten behov finnes fra før, endres den gamle og får den nyes behov satt.